build_output.txt
> Task :clean
> Task :bootBuildInfo

> Task :compileJava FAILED
C:\Prog\java\sc-trade-companion\src\main\java\tools\sctrade\companion\gui\ScreenshotsTab.java:5: error: package javafx.embed.swing does not exist
import javafx.embed.swing.SwingFXUtils;
                         ^
C:\Prog\java\sc-trade-companion\src\main\java\tools\sctrade\companion\gui\CompanionGui.java:139: error: constructor ScreenshotsTab in class ScreenshotsTab cannot be applied to given types;
    ScreenshotsTab screenshotsTab = new ScreenshotsTab();
                                    ^
  required: ScreenshotRepository
  found:    no arguments
  reason: actual and formal argument lists differ in length
C:\Prog\java\sc-trade-companion\src\main\java\tools\sctrade\companion\gui\ScreenshotsTab.java:114: error: cannot find symbol
    Image fxImage = SwingFXUtils.toFXImage(scaled, null);
                    ^
  symbol:   variable SwingFXUtils
  location: class ScreenshotsTab
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 1s
3 actionable tasks: 3 executed
